[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tbm13_utils"
version = "1.1"
authors = [
  { name="TBM13" },
]
description = "Lib with various utilities for my projects"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
]

dependencies = [
  "requests",
  "filelock",
  "pydantic",
]
[dependency-groups]
dev = [
    "pytest>=9.1.0",
]

[tool.pyright]
typeCheckingMode = "strict"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff.lint]
select = [
    "E", "F", "I", "W", "UP", "B", "SIM", "C4", "N", "RUF",
    "PIE", "PYI", "A", "ISC", "ICN", "INP001", "Q", "RSE",
    "RET", "SLF", "SIM", "PERF", "PLC", "PLE", "PLW",
    "FURB",

    "PT"
]