[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tbm13_utils"
version = "1.1"
authors = [
  { name="TBM13" },
]
description = "Lib with various utilities for my projects"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
]

dependencies = [
  "requests >= 2.34.2, < 3.0.0",
  "filelock >= 3.29.4, < 4.0.0",
  "pydantic >= 2.13.4, < 3.0.0",
  "prompt-toolkit >= 3.0.52, < 4.0.0",
  "typing-extensions >= 4.15.0, < 5.0.0",
  "annotated-types >= 0.7.0, < 1.0.0",
]
[dependency-groups]
dev = [
    "pytest==9.1.1",
]

[tool.pyright]
typeCheckingMode = "strict"
# Enable experimental support for Sentinel values (PEP 661)
enableExperimentalFeatures = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff.lint]
select = [
    "E", "F", "I", "W", "UP", "B", "SIM", "C4", "N", "RUF",
    "PIE", "PYI", "ISC", "ICN", "INP001", "Q", "RSE",
    "RET", "SIM", "PERF", "PLC", "PLE", "PLW", "FURB",

    "PT"
]
ignore = [
    "PLW2901", # redefined-loop-name
]