[project]
name = "tbm13_utils"
version = "2.0.0a1"
description = "Lib with various utilities for my projects"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name="TBM13" },
]
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
]
dependencies = [
  "requests>=2.34.0, <3.0.0",
  "filelock>=3.29.0, <4.0.0",
  "pydantic>=2.13.0, <3.0.0",
  "prompt-toolkit>=3.0.52, <4.0.0",
  "typing-extensions>=4.15.0, <5.0.0",
  "annotated-types>=0.7.0, <1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0, <10.0.0",
    "ruff>=0.15.20, <1.0.0",
]

[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"

[tool.pyright]
typeCheckingMode = "strict"
# Enable experimental support for Sentinel values (PEP 661)
enableExperimentalFeatures = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
